fix z-index and remove position sticky

--- a/src/components/ui/ConfirmationSection/ConfirmationSection.module.css
+++ b/src/components/ui/ConfirmationSection/ConfirmationSection.module.css
@@ -143,6 +143,7 @@
     max-width: 450px;
     height: 250px;
     padding: 15px;
+    position: static;
 
   }
 
@@ -157,7 +158,6 @@
   .rightForm {
     width: 80%;
     margin-top: 20px;
-    margin-bottom: 230px;
   }
 
   .confirmationText p {
@@ -197,6 +197,7 @@
     width: 90%;
     height: 220px;
     padding: 10px;
+    position: static;
 
   }
 
@@ -211,7 +212,6 @@
   .rightForm {
     width: 0%;
     margin-top: 15px;
-    margin-bottom: 230px;
 
   }
 
